np_exiv2/lib/src/np_exiv2_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Bindings for `src/np_exiv2.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class NpExiv2Bindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  NpExiv2Bindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  NpExiv2Bindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// Extract metadata from a file pointed to by @a path
  ///
  /// @return A handle to retrieve actual results, 0 if failed
  ffi.Pointer<Exiv2ReadResult> exiv2ReadFile(
    ffi.Pointer<ffi.Char> path,
    int is_read_xmp,
  ) {
    return _exiv2ReadFile(
      path,
      is_read_xmp,
    );
  }

  late final _exiv2ReadFilePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Exiv2ReadResult> Function(
              ffi.Pointer<ffi.Char>, ffi.Int)>>('exiv2ReadFile');
  late final _exiv2ReadFile = _exiv2ReadFilePtr.asFunction<
      ffi.Pointer<Exiv2ReadResult> Function(ffi.Pointer<ffi.Char>, int)>();

  /// Extract metadata from a buffer
  ///
  /// @return A handle to retrieve actual results, 0 if failed
  ffi.Pointer<Exiv2ReadResult> exiv2ReadBuffer(
    ffi.Pointer<ffi.Uint8> buffer,
    int size,
    int is_read_xmp,
  ) {
    return _exiv2ReadBuffer(
      buffer,
      size,
      is_read_xmp,
    );
  }

  late final _exiv2ReadBufferPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Exiv2ReadResult> Function(
              ffi.Pointer<ffi.Uint8>, ffi.Size, ffi.Int)>>('exiv2ReadBuffer');
  late final _exiv2ReadBuffer = _exiv2ReadBufferPtr.asFunction<
      ffi.Pointer<Exiv2ReadResult> Function(
          ffi.Pointer<ffi.Uint8>, int, int)>();

  ffi.Pointer<Exiv2ReadResult> exiv2ReadHttp(
    ffi.Pointer<ffi.Char> url,
    ffi.Pointer<ffi.Pointer<ffi.Char>> header_keys,
    ffi.Pointer<ffi.Pointer<ffi.Char>> header_values,
    int header_size,
    int is_read_xmp,
  ) {
    return _exiv2ReadHttp(
      url,
      header_keys,
      header_values,
      header_size,
      is_read_xmp,
    );
  }

  late final _exiv2ReadHttpPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<Exiv2ReadResult> Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.Pointer<ffi.Pointer<ffi.Char>>,
              ffi.UnsignedInt,
              ffi.Int)>>('exiv2ReadHttp');
  late final _exiv2ReadHttp = _exiv2ReadHttpPtr.asFunction<
      ffi.Pointer<Exiv2ReadResult> Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          ffi.Pointer<ffi.Pointer<ffi.Char>>,
          int,
          int)>();

  /// Copy metadata from one file to another
  ///
  /// @return boolean
  int exiv2CopyMetadataFromBuffer(
    ffi.Pointer<ffi.Uint8> from_buffer,
    int from_size,
    ffi.Pointer<ffi.Char> to_path,
    int should_copy_orientation,
    int should_copy_thumbnail,
  ) {
    return _exiv2CopyMetadataFromBuffer(
      from_buffer,
      from_size,
      to_path,
      should_copy_orientation,
      should_copy_thumbnail,
    );
  }

  late final _exiv2CopyMetadataFromBufferPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Uint8>,
              ffi.Size,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Int)>>('exiv2CopyMetadataFromBuffer');
  late final _exiv2CopyMetadataFromBuffer =
      _exiv2CopyMetadataFromBufferPtr.asFunction<
          int Function(
              ffi.Pointer<ffi.Uint8>, int, ffi.Pointer<ffi.Char>, int, int)>();

  /// Write or remove the EXIF DateTimeOriginal and OffsetTimeOriginal tags in
  /// the file at @a path
  ///
  /// If @a dateTime is null, both tags will be removed. If @a dateTime is not null
  /// but @a offsetTime is null, OffsetTimeOriginal will be removed.
  /// @return boolean
  int exiv2WriteFileDateTimeOriginal(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Char> dateTime,
    ffi.Pointer<ffi.Char> offsetTime,
  ) {
    return _exiv2WriteFileDateTimeOriginal(
      path,
      dateTime,
      offsetTime,
    );
  }

  late final _exiv2WriteFileDateTimeOriginalPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('exiv2WriteFileDateTimeOriginal');
  late final _exiv2WriteFileDateTimeOriginal =
      _exiv2WriteFileDateTimeOriginalPtr.asFunction<
          int Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>();

  /// Write or remove the EXIF GPS tags (GPSLatitudeRef, GPSLatitude,
  /// GPSLongitudeRef and GPSLongitude) in the file at @a path
  ///
  /// If either one of the four GPS values is null, all tags will be removed.
  /// @return boolean
  int exiv2WriteFileGps(
    ffi.Pointer<ffi.Char> path,
    ffi.Pointer<ffi.Char> latitudeRef,
    ffi.Pointer<ffi.Uint32> latitude,
    ffi.Pointer<ffi.Char> longitudeRef,
    ffi.Pointer<ffi.Uint32> longitude,
  ) {
    return _exiv2WriteFileGps(
      path,
      latitudeRef,
      latitude,
      longitudeRef,
      longitude,
    );
  }

  late final _exiv2WriteFileGpsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Uint32>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Uint32>)>>('exiv2WriteFileGps');
  late final _exiv2WriteFileGps = _exiv2WriteFileGpsPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Uint32>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Uint32>)>();

  /// Release the resources of a Exiv2ReadResult object returned by
  /// @a exiv2_read_file
  void exiv2ResultFree(
    ffi.Pointer<Exiv2ReadResult> that,
  ) {
    return _exiv2ResultFree(
      that,
    );
  }

  late final _exiv2ResultFreePtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<Exiv2ReadResult>)>>(
      'exiv2ResultFree');
  late final _exiv2ResultFree = _exiv2ResultFreePtr
      .asFunction<void Function(ffi.Pointer<Exiv2ReadResult>)>();
}

enum Exiv2TypeId {
  exiv2_type_id_unsigned_byte(0),
  exiv2_type_id_ascii_string(1),
  exiv2_type_id_unsigned_short(2),
  exiv2_type_id_unsigned_long(3),
  exiv2_type_id_unsigned_rational(4),
  exiv2_type_id_signed_byte(5),
  exiv2_type_id_undefined(6),
  exiv2_type_id_signed_short(7),
  exiv2_type_id_signed_long(8),
  exiv2_type_id_signed_rational(9),
  exiv2_type_id_tiff_float(10),
  exiv2_type_id_tiff_double(11),
  exiv2_type_id_tiff_ifd(12),
  exiv2_type_id_unsigned_long_long(13),
  exiv2_type_id_signed_long_long(14),
  exiv2_type_id_tiff_ifd8(15),
  exiv2_type_id_string(16),

  /// int32_t[3] (year, month, day)
  exiv2_type_id_date(17),

  /// int32_t[5] (hour, minute, second, tz_hour, tz_minute)
  exiv2_type_id_time(18),
  exiv2_type_id_comment(19),
  exiv2_type_id_directory(20),
  exiv2_type_id_xmp_text(21),
  exiv2_type_id_xmp_alt(22),
  exiv2_type_id_xmp_bag(23),
  exiv2_type_id_xmp_seq(24),
  exiv2_type_id_lang_alt(25),
  exiv2_type_id_invalid_type_id(26);

  final int value;
  const Exiv2TypeId(this.value);

  static Exiv2TypeId fromValue(int value) => switch (value) {
        0 => exiv2_type_id_unsigned_byte,
        1 => exiv2_type_id_ascii_string,
        2 => exiv2_type_id_unsigned_short,
        3 => exiv2_type_id_unsigned_long,
        4 => exiv2_type_id_unsigned_rational,
        5 => exiv2_type_id_signed_byte,
        6 => exiv2_type_id_undefined,
        7 => exiv2_type_id_signed_short,
        8 => exiv2_type_id_signed_long,
        9 => exiv2_type_id_signed_rational,
        10 => exiv2_type_id_tiff_float,
        11 => exiv2_type_id_tiff_double,
        12 => exiv2_type_id_tiff_ifd,
        13 => exiv2_type_id_unsigned_long_long,
        14 => exiv2_type_id_signed_long_long,
        15 => exiv2_type_id_tiff_ifd8,
        16 => exiv2_type_id_string,
        17 => exiv2_type_id_date,
        18 => exiv2_type_id_time,
        19 => exiv2_type_id_comment,
        20 => exiv2_type_id_directory,
        21 => exiv2_type_id_xmp_text,
        22 => exiv2_type_id_xmp_alt,
        23 => exiv2_type_id_xmp_bag,
        24 => exiv2_type_id_xmp_seq,
        25 => exiv2_type_id_lang_alt,
        26 => exiv2_type_id_invalid_type_id,
        _ => throw ArgumentError('Unknown value for Exiv2TypeId: $value'),
      };
}

/// A key value pair
final class Exiv2Metadatum extends ffi.Struct {
  external ffi.Pointer<ffi.Char> tag_key;

  @ffi.UnsignedInt()
  external int type_idAsInt;

  Exiv2TypeId get type_id => Exiv2TypeId.fromValue(type_idAsInt);

  external ffi.Pointer<ffi.Uint8> data;

  /// size of data in bytes
  @ffi.Size()
  external int size;

  /// number of elements in data if it's an array, 1 otherwise
  @ffi.Size()
  external int count;
}

final class Exiv2ReadResult extends ffi.Struct {
  @ffi.Uint32()
  external int width;

  @ffi.Uint32()
  external int height;

  external ffi.Pointer<Exiv2Metadatum> iptc_data;

  @ffi.Size()
  external int iptc_count;

  external ffi.Pointer<Exiv2Metadatum> exif_data;

  @ffi.Size()
  external int exif_count;

  external ffi.Pointer<Exiv2Metadatum> xmp_data;

  @ffi.Size()
  external int xmp_count;
}
